--- a/code/composer.json
+++ b/code/composer.json
@@ -39,9 +39,12 @@
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
         "symfony/uid": "7.3.*",
+        "symfony/ux-live-component": "^2.28",
         "symfony/ux-turbo": "^2.28",
+        "symfony/ux-twig-component": "^2.28",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
