--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   php-fpm:
-    image: tech-test
+    image: docupet-test
     build:
       context: .
       dockerfile: docker/php/Dockerfile
@@ -50,7 +50,10 @@ services:
     working_dir: /srv/app
     ports:
       - "8888:8000"
-    entrypoint: /bin/sh
+    command: >
+      sh -c "npm install &&
+             npx tailwindcss init -p || true &&
+             npm run dev -- --watch"
     volumes:
       - type: bind
         source: ./code
