--- a/code/package.json
+++ b/code/package.json
@@ -1,22 +1,10 @@
 {
-    "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
-        "@symfony/webpack-encore": "^5.0.0",
-        "autoprefixer": "^10.4.21",
-        "core-js": "^3.38.0",
-        "postcss": "^8.5.6",
-        "regenerator-runtime": "^0.13.9",
-        "tailwindcss": "^3.3.5",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^5.1.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    }
+  "name": "docupet-frontend",
+  "version": "1.0.0",
+  "description": "TailwindCSS build setup for DocuPet challenge",
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
+  }
 }
