--- a/code/composer.json
+++ b/code/composer.json
@@ -20,6 +20,7 @@
         "symfony/runtime": "7.3.*",
         "symfony/stimulus-bundle": "^2.28",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/uid": "7.3.*",
         "symfony/ux-live-component": "^2.28",
         "symfony/ux-turbo": "^2.28",
         "symfony/validator": "7.3.*",
