work in progress

--- a/code/config/packages/framework.yaml
+++ b/code/config/packages/framework.yaml
@@ -4,7 +4,9 @@ framework:
 
     # Note that the session will be started ONLY if you read or write from it.
     session: true
-
+    asset_mapper:
+        paths:
+            - assets
     #esi: true
     #fragments: true
 
