--- a/code/config/services.yaml
+++ b/code/config/services.yaml
@@ -16,5 +16,10 @@ services:
     App\:
         resource: '../src/'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Service\Pet\PetBreedResolverInterface: '@App\Service\Pet\PetBreedResolver'
+
+    App\Service\Pet\CachedPetBreedResolver:
+        decorates: App\Service\Pet\PetBreedResolverInterface
+        arguments:
+            $inner: '@App\Service\Pet\CachedPetBreedResolver.inner'
+            $cache: '@cache.app'
