--- a/code/.env.test
+++ b/code/.env.test
@@ -3,4 +3,6 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 APP_ENV=test
 APP_DEBUG=1
-DATABASE_URL=sqlite:///%kernel.project_dir%/var/test.db
+DATABASE_URL="mysqli://root:root_password@mysql:3306/docupet_db"
+
+
